fixed intro animation on mobile:

--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -13,6 +13,11 @@
   text-align: center;
 }
 
+.about-text{
+  padding: 0 10%; 
+}
+
+
 @media screen and (max-width: 720px) {
   .about{
     font-size: 40px;
@@ -20,6 +25,8 @@
 
   .about-container{
     padding: 20% 10%; 
+    -webkit-clip-path: polygon(0 0, 0 100%, 100% 70%, 100% 0);
+    clip-path: polygon(0% 20%, 0% 100%, 100% 80%, 100% 0%);
   }
 
   .me{
