--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -8,8 +8,6 @@ p{
 }
 
 .card-container{
-  padding-top: 100px;
-  margin-top: 500px;
   display: flex;
   flex-direction: column;
   font-size: 20px;
@@ -23,8 +21,6 @@ p{
 .project-card{
   margin: 50px 10%;
   padding: 2%;
-  border-radius: 20px;
-  box-shadow: 5px 5px 5px black;
 }
 
 .project-details{
@@ -62,7 +58,6 @@ p{
 .project-type{
   font-size: 30px;
   font-style: italic;
-  color: royalblue;
 }
 
 @media screen and (max-width: 720px) {
@@ -83,7 +78,6 @@ p{
     padding-top: auto;
     margin-top: 0;
     display: flex;
-    flex-direction: column;
     font-size: 20px;
   }
 
@@ -101,5 +95,6 @@ p{
     margin: auto 10px;
     font-size: 30px;
   }
+
 
 }
